# ball-majumdar-singular-potential

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  lebedev_quadrature_test.cpp  matrix_inversion.cpp  print_Q_tensor_shape.cpp  singular_potential_implementation.cpp  singular_potential_implementation.hpp  singular_potential_implementation_test.cpp  singular_potential_test.cpp
scripts/: generate_residual_code.py
src/: CMakeLists.txt  Q_tensor_shape.hpp  ball_majumdar_singular_potential.hpp  preprocessor.hpp  singular_potential.hpp  singular_potential.inl
theory/: README.md
